CRUD de Departament

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-4e842cdd-31d6-44cb-a689-488b3e8f91aa;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
